# RS2

GUI_WIP/: camera_poc.py  rs2_concept.ui
gamification/: constants.py  dictionary.py  display.py  main.py  wordle_logic.py
motion_planning_and_control/move_goal_test/: CMakeLists.txt  README  package.xml
motion_planning_and_control/move_goal_test/include/move_goal_test/: move_goal_test.hpp
motion_planning_and_control/move_goal_test/src/: move_goal_test.cpp
my_demo_gui/: CMakeLists.txt  package.xml
my_demo_gui/launch/: gui.launch.py  ur_driver_gui.launch.py
my_demo_gui/src/: camera_view.cpp  main.cpp  main_window.cpp  rviz_sim_view.cpp
perception/outputs/: training_report.txt
perception/src/: collect_training_data.py  train_letter_cnn.py
src/: To_Do.txt  realsense_camera_cnn.py  train_letter_cnn.py
voice_control/: main.py
